There are some more uses of 0 as a null pointer constant in C2 code that can be fixed by just using nullptr instead.
JDK-8335663 was about places in .hpp files. This is about places in .cpp files.
- blocks
-
JDK-8332189 Enable -Wzero-as-null-pointer-constant
- Open
- relates to
-
JDK-8335663 Fix simple -Wzero-as-null-pointer-constant warnings in C2 code
- Resolved
- links to
-
Commit(master) openjdk/jdk/388fcf03
-
Review(master) openjdk/jdk/20174