8336349: Fix more simple -Wzero-as-null-pointer-constant warnings in C2 code

Reviewed-by: kvn, shade